# navsim-local

./: .gitignore  .gitmodules  BUILD_GUIDE.md  CMakeLists.txt  COMPILATION_SUCCESS_REPORT.md  CONFIG_GUIDE.md  CONFIG_SUMMARY.md  DEBUGGING_SUMMARY.md  DIFFERENTIAL_ENVELOPE_FIX.md  DIRECTORY_STRUCTURE_ANALYSIS.md  DYNAMIC_OBSTACLE_FIX.md  FIX_COMPLETE.md  IMPLEMENTATION_READINESS_REPORT.md  IMPLEMENTATION_SUMMARY.md  OPENGL2_FIX.md  PERCEPTION_REFACTORING_COMPLETE.md  PHASE1_COMPLETION_REPORT.md  PHASE1_PROGRESS.md  PHASE2_COMPLETION_REPORT.md  PHASE2_E2E_TEST_REPORT.md  PHASE2_FINAL_REPORT.md  PHASE2_INTEGRATION_REPORT.md  PHASE2_PROGRESS.md  PHASE2_SUMMARY.md  PHASE2_TEST_SUCCESS_REPORT.md  PLUGIN_CONFIGURATION_GUIDE.md  PLUGIN_REFACTORING_PLAN.md  PLUGIN_SYSTEM_README.md  PREPROCESSING_LAYER_FIX_REPORT.md  QUICK_START_VISUALIZATION.md  README.md  REFACTORING_COMPLETE_REPORT.md  SDL_RENDERER_MIGRATION_SUCCESS.md  SIMULATION_START_FIX.md  STATIC_OBSTACLES_FIX.md  TESTING_GUIDE.md  TRAJECTORY_VERIFICATION.md  TRAJECTORY_VISUALIZATION_README.md  VISUALIZATION_CHANGES_SUMMARY.md  VISUALIZATION_FIXED.md  (+17 more)
apps/: navsim_algo.cpp  navsim_local_debug.cpp
cmake/: README.md
config/: README.md  default.json  default.json.example  tmpc_test.json  with_visualization.json
config/examples/: astar_planner.json  legacy_system.json  minimal.json  plugin_system.json
docs/: ARCHITECTURE.md  BROWSER_DIAGNOSIS.js  BUG_FIX_TRAJECTORY_DISPLAY.md  CLOSED_LOOP_IMPLEMENTATION_SUMMARY.md  CLOSED_LOOP_SIMULATION.md  DEBUG_TRAJECTORY_NOT_SHOWING.md  DEVELOPMENT_TOOLS.md  DIAGNOSIS_EGO_INVISIBLE_AND_DRIFT.md  EGO_MOTION_FIX.md  ESDF_DISTANCE_TEXT_VISUALIZATION.md  ESDF_FINAL_SUMMARY.md  ESDF_MOUSE_HOVER_DISPLAY.md  ESDF_OBSTACLE_INTERIOR_VERIFICATION.md  ESDF_SIGNED_DISTANCE_FIX.md  ESDF_TEST_RESULTS.md  ESDF_UNIT_CONVERSION_BUG_FIX.md  ESDF_VISUALIZATION_AND_VERIFICATION_COMPLETE.md  ESDF_VISUALIZATION_DEBUG.md  ESDF_VISUALIZATION_IMPROVEMENTS.md  FINAL_CHECKLIST.md  FINAL_COMPLETION_REPORT.md  FIX_EGO_JITTERING.md  FIX_PLAYBACK_CONFLICT.md  FIX_START_GOAL_DISPLAY.md  FRONTEND_CONNECTION_EXPLAINED.md  GETTING_STARTED.md  HOW_TO_DEBUG_TRAJECTORY.md  IMPORTANT_CLARIFICATION.md  JPS_ADAPTATION_GUIDE.md  JPS_ALGORITHM_INPUTS.md  JPS_COMPLETE_ADAPTATION_PLAN.md  JPS_PLANNER_ANALYSIS.md  JPS_PLANNER_SUMMARY.md  MINCO_TRAJECTORY_EXTRACTION.md  MOTION_MODEL_EXPLAINED.md  NEW_PLANNER_CHECKLIST.md  PERCEPTION_ARCHITECTURE_UPDATE.md  PERCEPTION_PLUGIN_ARCHITECTURE.md  PERCEPTION_PLUGIN_REFACTORING_SUMMARY.md  PHASE1_2_3_COMPLETION_SUMMARY.md  (+28 more)
docs/archive/: ARCHITECTURE_ANALYSIS.md  LOCAL_DEBUG_MODE.md  PLUGIN_LOADING_MECHANISM.md  PLUGIN_SCAFFOLDING_IMPROVEMENTS.md  README.md
docs/user-guide/: getting-started.md  online-mode.md
include/: algorithm_manager.hpp  bridge.hpp  perception_processor.hpp  planner.hpp  planner_interface.hpp  planning_context.hpp  websocket_visualizer.hpp
include/core/: algorithm_manager.hpp  bridge.hpp  planning_context.hpp
include/perception/: preprocessing.hpp
include/plugin/: config_loader.hpp  perception_input.hpp  perception_plugin_interface.hpp  perception_plugin_manager.hpp  planner_plugin_interface.hpp  planner_plugin_manager.hpp  planning_result.hpp  plugin_registry.hpp
include/plugin/framework/: dynamic_plugin_loader.hpp  planner_plugin_manager.hpp
include/viz/: imgui_visualizer.hpp
platform/include/core/: algorithm_manager.hpp  scenario_loader.hpp
platform/include/viz/: imgui_visualizer.hpp  visualizer_interface.hpp
platform/proto/: world_tick.proto
platform/src/core/: algorithm_manager.cpp  bridge.cpp  scenario_loader.cpp
platform/src/sim/: local_simulator.cpp
platform/src/viz/: imgui_visualizer.cpp
plugins/: plugin_loader.cpp
plugins/perception/: grid_map_builder_plugin.cpp  grid_map_builder_plugin.hpp
plugins/perception/grid_map_builder/: CMakeLists.txt
plugins/planning/: CMakeLists.txt  astar_planner_plugin.cpp  astar_planner_plugin.hpp  straight_line_planner_plugin.cpp  straight_line_planner_plugin.hpp
plugins/planning/astar/: CMakeLists.txt
plugins/planning/jps_planner/: CMakeLists.txt
plugins/planning/straight_line/: CMakeLists.txt
plugins/planning/straight_line_planner/: CMakeLists.txt  README.md
plugins/planning/straight_line_planner/adapter/: register.cpp  straight_line_plugin.cpp  straight_line_plugin.hpp
plugins/planning/straight_line_planner/algorithm/: straight_line.cpp  straight_line.hpp
plugins/planning/t_mpc/: CMakeLists.txt
plugins/planning/t_mpc/adapter/: register.cpp  tmpc_planner_plugin.cpp  tmpc_planner_plugin.hpp
plugins/planning/t_mpc/algorithm/: README.md  build_run_sim.sh  main.cpp
plugins/planning/t_mpc/algorithm/guidance_planner/config/: params.yaml
plugins/planning/t_mpc/algorithm/mpc_planner_jackalsimulator/config/: settings.yaml
plugins/planning/test_planner/: CMakeLists.txt  README.md
plugins/planning/test_planner/adapter/: register.cpp  test_planner_plugin.cpp  test_planner_plugin.hpp
plugins/planning/test_planner/algorithm/: test_planner.cpp  test_planner.hpp
scenarios/: 2.json  map1.json  map10.json  map11.json  map12.json  map13.json  map14.json  map15.json  map16.json  map17.json  map18.json  map2.json  map20.json  map3.json  map5.json  map6.json  simple_corridor.json
src/: algorithm_manager.cpp  bridge.cpp  main.cpp  perception_processor.cpp  planner.cpp  planner_interface.cpp  planning_context.cpp  websocket_visualizer.cpp
src/core/: algorithm_manager.cpp  bridge.cpp  main.cpp  planning_context.cpp
src/perception/: basic_converter.cpp  bev_extractor.cpp  dynamic_predictor.cpp  preprocessing_pipeline.cpp
src/plugin/: config_loader.cpp  perception_plugin_manager.cpp  planner_plugin_manager.cpp  plugin_init.cpp
src/plugin/framework/: config_loader.cpp  dynamic_plugin_loader.cpp  planner_plugin_manager.cpp  plugin_init.cpp
src/plugin/preprocessing/: basic_converter.cpp  bev_extractor.cpp  dynamic_predictor.cpp  preprocessing_pipeline.cpp
src/viz/: imgui_visualizer.cpp
templates/planner_plugin/: CMakeLists.txt
tests/: test_esdf_map.cpp  test_plugin_system.cpp
(+38 files in other folders)
